# client-compatibility-suites

./: .gitignore  README.md  download_server_jars.py  get_client_matrix.py  get_java_client_test_filters_matrix.py  get_server_matrix.py  go-rc.sh  run-all-cpp.sh  run-all-nodejs.sh  run-all-python.sh  run-all.sh  run-cpp-client-with-server-versions.sh  run-jenkins.bat  run-jenkins.sh  set_which_client_run.py  start_rc.py  start_remote_controller.py  tests-jar.diff  util.py
.github/: auto_request_review.yml  dependabot.yml  java-config.yml
.github/workflows/: KubernetesExternalClients.yaml  KubernetesInternalClients.yaml  auto-assign.yaml  cloud_csharp_client_test.yaml  cloud_csharp_client_test.yaml.txt  cloud_go_client_test.yaml  cloud_java_client_test.yaml  cloud_nodejs_client_test.yaml  cloud_python_client_test.yaml  cpp_client_compatibility.yaml  csharp_client_compatibility.yaml  get-client-matrix.yaml  get-server-matrix.yaml  go_client_compatibility.yaml  java_8_client_compatibility.yaml  java_client_compatibility.yaml  java_client_compatibility_os_parallel.yaml  java_thin_client_compatibility.yaml  nodejs.yml  nodejs_client_compatibility.yaml  python_client_compatibility.yaml  server_compatibility - Copy.yaml  server_compatibility.yaml  server_compatibility_with_java_thin_client.yaml
HazelcastCloudTests/CppHazelcastCloudTests/: .clang-format  .gitignore  CMakeLists.txt  other_test.cpp  remote_controller.thrift  some_test.cpp  util.cpp  util.hpp
HazelcastCloudTests/CppHazelcastCloudTests/cmake/Modules/: FindThrift.cmake
HazelcastCloudTests/CppHazelcastCloudTests/rc/: RemoteController.cpp  RemoteController.h  remote_controller_types.cpp  remote_controller_types.h
HazelcastCloudTests/PythonHazelcastCloudTests/: aws_enterprise_cluster_test.py  aws_ssl_enterprise_cluster_test.py  azure_enterprise_cluster_test.py  azure_ssl_enterprise_cluster_test.py  gcp_enterprise_cluster_test.py  gcp_ssl_enterprise_cluster_test.py  requirements-test.txt  standard_cluster_test.py
HazelcastCloudTests/gohazelcastcloudtests/: cloud_test.go  go.mod  go.sum  helper_functions.go
cpp/: run-tests-with-remote-controller.sh  run-tests.sh  run.sh
cpp/3.6.1/: clientTest_SHARED_64
dotnet/: .gitignore  README.txt  run-tests.bat  run-tests.sh  run.bat  run.sh  test-client-server.ps1  test-client.bat  test-client.ps1  test-server.bat  test-server.ps1  test.proj
etc/: hazelcast-default-ca.xml
hazelcast/: README.md  download.sh
nodejs/: run-client.sh  run-tests.sh  run.sh
org/: test.txt
python/: run-client.sh  run-tests.sh  run.sh
(+1262 files in other folders)
